# askliam

./: docker-compose.yaml  package-lock.json  package.json
backend/: .env.development  .env.production  Dockerfile  pyproject.toml
backend/app/: main.py  test.py  test2.py
backend/app/core/settings/: __init__.py  base.py
backend/app/core/settings/config/: common.yaml  dev.yaml  prod.yaml
backend/app/router/: api.py
backend/app/router/endpoint/: chat.py  server_info.py
backend/app/utils/: logging.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/AskLiam/: ChatInterface.tsx  ContentPanel.tsx  InferenceSettings.tsx  MessageContent.tsx  ModelInfoDialog.tsx  PerformanceMonitoring.tsx  SystemPromptDialog.tsx  api.ts  index.tsx  types.ts
frontend/src/components/ui/: dialog.tsx  scroll-area.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx
frontend/src/hook/: useChat.ts  useServerUsage.ts
frontend/src/pages/: main.tsx
